infra/scenarios/azure_kubernetes_playground/manifests/http-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server
  labels:
    app.kubernetes.io/name: http-server
    app.kubernetes.io/part-of: azure-kubernetes-playground
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: http-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: http-server
        app.kubernetes.io/part-of: azure-kubernetes-playground
    spec:
      containers:
        - name: http-server
          image: ks6088ts/workshop-kubernetes:0.0.5
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
