infra/scenarios/azure_kubernetes_playground/manifests/http-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server
  labels:
    app.kubernetes.io/name: http-server
    app.kubernetes.io/part-of: azure-kubernetes-playground
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: http-server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
