infra/scenarios/azure_kubernetes_playground/manifests/http-server/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-server
  labels:
    app.kubernetes.io/name: http-server
    app.kubernetes.io/part-of: azure-kubernetes-playground
spec:
  parentRefs:
    - name: workshop-gateway
      namespace: workshop-gateway
      sectionName: http
  hostnames:
    - http-server.workshop.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: http-server
          port: 80
